fixes horizontal overflow for too long strings with no spaces

--- a/packages/3d-web-text-chat/src/chat-ui/message.module.css
+++ b/packages/3d-web-text-chat/src/chat-ui/message.module.css
@@ -1,6 +1,7 @@
 .messageContainer {
   border-bottom: 1px solid rgba(128, 128, 128, 0.21);
   padding: 5px 0px;
+  overflow-x: hidden;
 }
 
 .userName {
